Fix building against newer FreeRDP versions

https://bugzilla.gnome.org/show_bug.cgi?id=749124